# ProfessorAI

./: .gitignore  CMakeLists.txt  INSTALL  README.md
doc/: ARCHITECTURE.md
etc/: professord.ini.example  professord.service
src/: api_types.c  api_types.h  config.c  config.h  daemon.c  daemon.h  inference.c  inference.h  logger.c  logger.h  main.c  recommend.c  recommend.h  server.c  server.h  stats.c  stats.h  worker.c  worker.h
tests/: test_all.sh  test_api_types.c  test_config.c  test_curl.sh  test_stress.sh
